<resources>
    <string name="app_name">My Application1</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="add_account">Add Account</string>
    <string name="spotify">Spotify</string>
    <string name="prime">prime</string>
    <string name="netflix">netflix</string>
    <string name="disney">disney</string>
    <string name="choose_account">Choose Account:</string>
    <string name="start_date">Start Date</string>
    <string name="start_date_dd_mm_yyyy">Start Date [DD/MM/YYYY]</string>
    <string name="confirm">Confirm</string>
    <string name="title_boruto">Title: Boruto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="search_here">Search Here.....</string>
    <string name="name">Name</string>
    <string name="profilepic">ProfilePic</string>
    <string name="to_add_a_profile_pic">To Add a Profile Pic</string>
    <string name="todo">TODO</string>
    <string name="add_spotify">Add Spotify</string>
    <string name="add_netflix">Add Netflix</string>
    <string name="add_disney">Add Disney</string>
    <string name="have_a_group_id">Have a Group ID?</string>
    <string name="date">Date</string>
    <string name="plan">Plan</string>
    <string name="e_mail">E-mail</string>
    <string name="username">UserName</string>
    <string name="enter_account_details">Enter Account Details:</string>
    <string name="delete_the_content">Delete the content</string>
    <string name="submit">Submit</string>
</resources>