<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:background="@drawable/bottomsheetlayout">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:text="@string/enter_account_details"
        android:textColor="@color/black"
        android:textColorHint="@color/teal_200"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/input_layout"
        android:paddingStart="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="6dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textIsSelectable="true"
        app:layout_constraintBottom_toTopOf="@id/edtEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="40dp"

        android:background="@drawable/input_layout"
        android:paddingStart="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/e_mail"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textIsSelectable="true"
        app:layout_constraintBottom_toTopOf="@id/edtPlan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtUserName"/>

    <EditText
        android:id="@+id/edtPlan"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/input_layout"
        android:paddingStart="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="6dp"
        android:hint="@string/plan"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtEmail" />

    <EditText
        android:id="@+id/edtDate"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/input_layout"
        android:paddingStart="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/date"
        android:textColor="@color/black"
        android:textIsSelectable="true"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/joinbygrpid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtPlan" />

    <TextView
        android:id="@+id/joinbygrpid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_a_group_id"
        android:textColor="@color/teal_200"
        android:textColorHint="@color/teal_200"
        android:textCursorDrawable="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.917"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtDate" />
<Button
    android:id="@+id/submitButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_shape"
    app:backgroundTint="@color/purple_500"
    android:layout_marginTop="4dp"
    android:layout_marginStart="10dp"
    android:text="@string/submit"
    android:layout_marginBottom="20dp"
    android:layout_marginEnd="10dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"

    app:layout_constraintTop_toBottomOf="@id/joinbygrpid"
    app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>