<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragements.Home">

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/addAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/add_account"
        app:icon="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!--Floating action button for add alarm-->
    <!--Make sure that you are constraining this
        button to the parent button-->
    <!--Make sure to add backgroundTint attribute to match
         the entire application color-->
    <!--because after changing the base application theme the color
         of the FAB is set Blue as default-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addSpotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="74dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="bottom|end"
        app:fabSize="normal"
        android:backgroundTint="@color/purple_200"
        app:maxImageSize="64dp"
        app:layout_constraintBottom_toTopOf="@+id/addAccount"
        app:layout_constraintEnd_toEndOf="@+id/addAccount"
        android:src="@drawable/ic_spotify_logo_wine"
        />

    <!--Action name text for the add alarm button-->
    <!--Make sure that you are constraining this
        Text to the add Alarm FAB button-->
    <TextView
        android:id="@+id/addspotifyaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="90dp"
        android:layout_gravity="end|bottom"
        android:text="@string/add_spotify"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addNetflix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="138dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="bottom|end"
        app:fabSize="normal"
        android:backgroundTint="@color/purple_200"
        app:maxImageSize="49dp"
        app:srcCompat="@drawable/ic_netflix_logo_wine" />

    <TextView
        android:id="@+id/addNetflixaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="154dp"
        android:layout_gravity="end|bottom"
        android:text="@string/add_netflix"
        app:layout_constraintBottom_toBottomOf="@+id/add_person_fab"
        app:layout_constraintEnd_toStartOf="@+id/add_person_fab"
        app:layout_constraintTop_toTopOf="@+id/add_person_fab" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addPrime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="202dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="bottom|end"
        app:fabSize="normal"
        android:backgroundTint="@color/purple_200"
        app:maxImageSize="54dp"
        android:src="@drawable/ic_prime_video_logo_wine" />

    <TextView
        android:id="@+id/addPrimeaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="218dp"
        android:layout_gravity="end|bottom"
        android:text="Add Prime" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addDisney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="266dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="bottom|end"
        app:fabSize="normal"
        android:backgroundTint="@color/purple_200"
        app:maxImageSize="64dp"
        app:srcCompat="@drawable/ic_disney" />

    <TextView
        android:id="@+id/addDisneyAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="272dp"
        android:layout_gravity="end|bottom"
        android:text="@string/add_disney" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/OTTLIST"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</FrameLayout>